Changes in 0.3.1
================
	* Shell quote the filenames Debian #573554
	* gjay works with stdin going to /dev/null

Changes in 0.3.0
================
	* New maintainer Craig Small <csmall@enc.com.au>
	* Updated mp3info code from mp3info
	* forced vbr analysis - stops crashes on vbr mp3 files
	* Minor fixes SF#1441319
	* Check fopen succeeds in read_song_file_type - Kevin Turner SF#1282527
	* Works with Audacious
	* Moved some of the globals into one global struct
	* Cleaned up command line interpretation
	* Added gettext

Changes in 0.2.8-3 - January 2004
=================================
	* Bugs:
	- Color saturation was being factored in _way_ too much for playlist
	  generation (thanks to William Thomas for pointing this out)
	- Fix case where some long analysis runs were not getting written to 
	  data.xml properly (sourceforge bug 698761)
	* Features:
	- Make playlist time 4 digits wide so users can have extra-long
	  list (sourceforge bug 745364)
	- Use both inode and dev for identifying symlinks (debian bug 227122)

Changes in 0.2.8-2 - December 2003
==================================
	* Patch: 
	- Apply Udi Meiri's patch to escape not_song paths.

Changes in 0.2.8 - December 2003
=============================
	* Bugs:
	- Some (evil) ID3 tags were not readable and caused a core dump. 
	  (Debian bug 222195)
	* UI:
	- Support full HSV model for song color selection.

Changes in 0.2.7 - November 2003
================================
	*  Bugs:
	- (Provided by Giacomo Catenazzi) verify opendir()
	* Architecture:
	- Removed dependancy on mp3info to read ID3 tags. This gives a significant
	  speedup. 
	- Along the way, allow us to read styles not supported by mp3info, notably
	  iTunes-ripped mp3s
	- Ogg vorbis is now optional (though highly desired, of course)
	* UI:
	- Added menubar, moved prefs and about into there
	- Improved directory selection dialog
	- Jump to song currently playing in XMMS 

Changes in 0.2.6 - January 19, 2003