@@ -64,7 +64,7 @@ Set the playlist length, in minutes
 .IP "-u"
 Use the M3U playlist format, which includes title, artist, and length information
 .IP "-x" 
-Play the generated playlist in XMMS
+Play the generated playlist in mp3 player
 
 .LP
 .SH OTHER OPTIONS
@@ -73,8 +73,12 @@ Print the results of analyzing a file to stdout. Does not consult existing file 
   
 .SH AUTHOR
 Written by Chuck Groom <cgroom@users.sourceforge.net>
+and Craig Small <csmall@enc.com.au>
 
 .SH COPYRIGHT
-Copyright (c) 2002-2003 by Chuck Groom. Released under the terms of the
-GPL.
+Copyright (c) 2002-2003 by Chuck Groom and 2010 Craig Small.
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2 of the License, or
+(at your option) any later version.
 .\" end of file
