@@ -2,6 +2,8 @@ Changes in 0.3.1
 ================
 	* Shell quote the filenames Debian #573554
 	* gjay works with stdin going to /dev/null
+	* colorwheel song selection works again
+	* Fixed bug where frequency ranges were all 0
 
 Changes in 0.3.0
 ================
